syntax = "proto3";
import "google/protobuf/empty.proto";
package shortener;

option go_package = "urlshortener/proto";

message CreateShortLinkRequest {
  string originalURL = 1;
}

message CreateShortLinkResponse {
  string shortURL = 1;
}

message GetOriginalLinkRequest {
  string shortURL = 1;
}

message GetOriginalLinkResponse {
  string originalURL = 1;
}

message CreateLinksInBatchesRequest {
  repeated string originalURLs = 1;
}

message CreateLinksInBatchesResponse {
  repeated string shortURLs = 1;
}

message GetAllShorterURLsRequest {
  string userID = 1;
}

message GetAllShorterURLsResponse {
  repeated string shortURLs = 1;
}

message DeleteURLSRequest {
  repeated string shortURLs = 1;
}

message PingDBConnectionResponse {
  bool ok = 1;
}

message GetStatsResponse {
  int64 urls = 1;
  int64 users = 2;
}

service UrlShortener {
  rpc CreateShortLink(CreateShortLinkRequest) returns (CreateShortLinkResponse);
  rpc GetOriginalLink(GetOriginalLinkRequest) returns (GetOriginalLinkResponse);
  rpc CreateLinksInBatches(CreateLinksInBatchesRequest) returns (CreateLinksInBatchesResponse);
  rpc GetAllShorterURLs(GetAllShorterURLsRequest) returns (GetAllShorterURLsResponse);
  rpc DeleteURLS(DeleteURLSRequest) returns (google.protobuf.Empty);
  rpc PingDBConnection(google.protobuf.Empty) returns (PingDBConnectionResponse);
  rpc GetStats(google.protobuf.Empty) returns (GetStatsResponse);
}